--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,10 @@
     "name": "bsscommerce/quick-view",
     "description": "Bss Quick View Module",
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0"
+        "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0"
     },
     "type": "magento2-module",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
